--- a/Equipment1/Equipment1.vcxproj.filters
+++ b/Equipment1/Equipment1.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="Active.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Items.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Active.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Items.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
