переходы между 3 формами

--- a/Equipment1/Equipment1.vcxproj
+++ b/Equipment1/Equipment1.vcxproj
@@ -142,6 +142,9 @@
     <EmbeddedResource Include="Items.resx">
       <DependentUpon>Items.h</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Peoples.resx">
+      <DependentUpon>Peoples.h</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
